# tree-sitter-svelte

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  binding.gyp  build.zig  compile_flags.txt  grammar.js  gyro.zzz  index.d.ts  index.js  nodemon.json  package.json  tree-sitter-svelte.wasm
bindings/node/: index.js
bindings/rust/: README.md  build.rs  lib.rs
bindings/zig/: parser.zig
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
script/: genZigLib.js  generateTSDefinition.js  tree-sitter.d.ts
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  tag.h  tag.hh  utils.h
src/utils/: allocator.h  ekstring.h  hashmap.h  vector.h
test/: test.js  test.svelte
test/corpus/: html.txt  random.txt  svelte.txt
test/corpus/files/: a.svelte
