[package]
name = "tree-sitter-svelte"
version = "0.8.1"
authors = ["Himujjal <himu@tuta.io>"]
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "svelte"]
categories = ["parsing", "text-editors", "tree-sitter"]
repository = "https://github.com/Himujjal/tree-sitter-svelte"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc = "1.0"

